[package]
name = "bdf-reader"
version = "0.1.0"
edition = "2021"

license = "EPL-2.0"
description = "BDF font format reader"
repository = "https://github.com/heu-rs/bdf-reader"
keywords = ["bdf", "bitmap", "font"]

[dependencies]
bit-vec = "0.6"
log = "0.4"
paste = "1.0"
thiserror = "1.0"

[dev-dependencies]
indoc = "1.0"
pretty_assertions = "1.0"
simple_logger = "2.3"

[profile.test]
opt-level = 2
