[package]
name = "bdf-reader"
version = "0.1.1"
edition = "2021"

license = "EPL-2.0"
description = "BDF font format reader"
keywords = ["bdf", "bitmap", "font"]

repository = "https://github.com/heu-rs/bdf-reader"
include = ["Cargo.toml", "README.md", "LICENSE-EPL-2.0", "src/**/*.rs"]

[dependencies]
bit-vec = "0.6"
log = "0.4"
paste = "1.0"
thiserror = "1.0"

[dev-dependencies]
indoc = "1.0"
pretty_assertions = "1.0"
simple_logger = "2.3"

[profile.test]
opt-level = 2
